Add possibility to push changes to private repository

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,15 @@
 
     </dependencies>
 
-
-
+    <distributionManagement>
+        <repository>
+            <id>myMavenRepo.write</id>
+            <url>${myMavenRepo.write.url}</url>
+        </repository>
+        <snapshotRepository>
+            <id>myMavenRepo.write</id>
+            <url>${myMavenRepo.write.url}</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
